--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/preset": "^4.0.5",
     "@rematch/core": "^1.2.0",
     "@rematch/loading": "^1.2.1",
     "@rematch/persist": "^1.1.6",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
+    "emotion-theming": "^10.0.19",
     "history": "^4.7.2",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
